--- a/front/src/App.css
+++ b/front/src/App.css
@@ -196,12 +196,12 @@ button:hover {
 .event-btn {
   padding: 10px;
   cursor: pointer;
-  background-color: #3498db;
+  background-color: #d86161;
   color: #fff;
   border: none;
   border-radius: 4px;
 }
 
 .event-btn:hover {
-  background-color: #2980b9;
+  background-color: #a13d3d;
 }
