--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
 }
 
 .App-logo {
@@ -25,16 +25,40 @@
 
 .App-link {
   color: #61dafb;
+}*/
+
+/*BUTTON*/
+
+.custom-button {
+  border: none;
+  background: rgb(204, 91, 91);
+  color: white;
+  padding: 12px 24px;
+  margin: 8px;
+  font-size: 24px;
+  border-radius: 8px;
+  cursor: pointer;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.small-button {
+  font-size: 17px; /* Adjust the font size as needed */
+  padding: 10px 16px; /* Adjust the padding as needed */
+  margin: 0 5%;
 }
+
+.custom-button button:hover {
+  background-color: #b33f3f;
+}
+
+
+
+.navbar{
+  
+  height: 50px;
+}
+
+/*kalendar*/
 
 div {
   text-align: center;
@@ -51,7 +75,7 @@ table {
 
 th, td {
   border: 1px solid #2c1919;
-  padding: 38px;
+  padding: 37px;
   font-size: 24px;
 }
 
@@ -151,7 +175,7 @@ button:hover {
 }
 
 .event-card {
-  background-color: #d44b4b;
+  background-color: #d44b4bea;
   color: #fff;
   padding: 4px;
   margin-bottom: 2px;
