--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,4 +1,5 @@
 html,
+
 body {
   padding: 0;
   margin: 0;
@@ -28,7 +29,7 @@ code {
 
 input[type="button"] {
     border: none;
-    background: cornflowerblue;
+    background: rgb(240, 91, 91);
     color: white;
     padding: 12px 24px;
     margin: 8px;
