--- a/front/src/App.css
+++ b/front/src/App.css
@@ -41,6 +41,8 @@
 
 }
 
+
+
 .small-button {
   font-size: 17px; /* Adjust the font size as needed */
   padding: 10px 16px; /* Adjust the padding as needed */
@@ -297,5 +299,49 @@ button:hover {
   padding-bottom: 10px;
 }
 
+/*promena info*/
+/* Add this CSS in your stylesheets */
 
+.modal-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.modal-header {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.modal-input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-btn {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #d66b67;
+
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+}
+
+.modal-btn:hover {
+  background-color: #aa2d2d;
+}
 
